fix(select): fixes spacing in toggle

--- a/src/patternfly/components/Select/select.scss
+++ b/src/patternfly/components/Select/select.scss
@@ -28,12 +28,21 @@
   --pf-c-select__toggle--m-plain--Color: var(--pf-global--Color--200);
   --pf-c-select__toggle--m-plain--hover--Color: var(--pf-global--Color--100);
 
+  // Toggle wrapper doesn't need top padding unless there's a typeahead with adjustment for the input
+  --pf-c-select__toggle-wrapper--PaddingTop: 0;
+
+  // When there is a typeahead (input box) adjust the top padding of the wrapper in case it wraps to the second line
+  --pf-c-select__toggle-wrapper--typeahead--PaddingTop: var(--pf-global--spacer--xs);
+
   // Space for the children of the toggle
   --pf-c-select__toggle-wrapper--not-last-child--MarginRight: var(--pf-global--spacer--xs);
 
   // Max-width is needed for ellipsing the text. This leaves enough space for the toggle caret.
   // However, for cases where the clear icon button or a badge are added, the correct width will need to be calculated in script
   --pf-c-select__toggle-wrapper--MaxWidth: calc(100% - var(--pf-global--spacer--lg));
+
+  // Chip group within a toggle-wrapper needs a margin-bottom in case it wraps
+  --pf-c-select__toggle-wrapper--c-chip-group--MarginBottom: 0;
 
   // The button inside a chip must be adjusted to reduce the padding, which is driving the height of the chip, so it fits within the toggle
   --pf-c-select__toggle-wrapper--c-chip--c-button--PaddingTop: var(--pf-global--spacer--xs);
@@ -187,6 +196,7 @@
   &.pf-m-typeahead {
     --pf-c-select__toggle--PaddingTop: 0;
     --pf-c-select__toggle--PaddingBottom: 0;
+    --pf-c-select__toggle-wrapper--PaddingTop: var(--pf-c-select__toggle-wrapper--typeahead--PaddingTop);
 
     input {
       overflow: hidden;
@@ -224,6 +234,7 @@
   // Max-width is needed for ellipsing the text. This leaves enough space for the toggle caret.
   // However, for cases where the clear icon button or a badge are added, the correct width will need to be calculated in script
   max-width: var(--pf-c-select__toggle-wrapper--MaxWidth);
+  padding-top: var(--pf-c-select__toggle-wrapper--PaddingTop);
   white-space: normal;
 
   // Add space between children
@@ -236,6 +247,16 @@
   .pf-c-chip .pf-c-button {
     padding-top: var(--pf-c-select__toggle-wrapper--c-chip--c-button--PaddingTop);
     padding-bottom: var(--pf-c-select__toggle-wrapper--c-chip--c-button--PaddingBottom);
+  }
+
+  // if there is an input in the toggle-wrapper, then give it a negative top margin to match the typeahead top padding
+  > input {
+    margin-top: calc(-1 * var(--pf-c-select__toggle-wrapper--typeahead--PaddingTop));
+  }
+
+  // a chip group needs a bottom margin to make some space between the chip group and typeahead input box if it wraps
+  .pf-c-chip-group {
+    margin-bottom: var(--pf-c-select__toggle-wrapper--c-chip-group--MarginBottom);
   }
 }
 
